fix: complete D3-T05 import raw handling